# moxnotify

./: Cargo.toml  README.md  flake.nix  pl.mox.notify.service.in  rustc-ice-2025-06-15T07_41_30-2147132.txt  rustc-ice-2025-06-15T07_42_32-2147700.txt  rustc-ice-2025-06-15T07_43_53-2148964.txt  rustc-ice-2025-06-15T07_43_59-2149009.txt  rustc-ice-2025-06-15T07_44_08-2149109.txt  rustc-ice-2025-06-15T07_44_16-2149332.txt  rustc-ice-2025-06-15T07_44_21-2149389.txt  rustc-ice-2025-06-15T07_44_26-2149719.txt  rustc-ice-2025-06-15T07_44_31-2149791.txt  rustc-ice-2025-06-15T07_44_54-2149943.txt  rustc-ice-2025-06-15T11_32_08-528494.txt  rustc-ice-2025-06-15T11_32_08-528495.txt  rustc-ice-2025-06-15T12_38_52-556340.txt  rustc-ice-2025-06-15T12_39_00-556391.txt  rustc-ice-2025-06-15T12_39_29-557429.txt  rustc-ice-2025-06-15T12_39_51-558553.txt  rustc-ice-2025-06-15T12_40_22-558801.txt  rustc-ice-2025-06-15T12_42_03-559862.txt  rustc-ice-2025-06-15T12_42_08-559925.txt  rustc-ice-2025-06-15T12_42_14-559971.txt  rustc-ice-2025-06-15T12_42_21-560017.txt  rustc-ice-2025-06-15T12_43_03-560153.txt  rustc-ice-2025-06-15T12_43_25-560214.txt  rustc-ice-2025-06-15T12_43_32-560336.txt  rustc-ice-2025-06-15T12_44_22-562948.txt  rustc-ice-2025-06-15T12_44_32-563075.txt  test.nu  test.sh
.cargo/: config.toml
.github/workflows/: test.yaml
contrib/systemd/: moxnotify.service  moxnotify.service.in
ctl/: Cargo.toml
ctl/src/: main.rs  notify.rs
daemon/: Cargo.toml
daemon/src/: audio.rs  buffers.rs  button.rs  component.rs  image_data.rs  main.rs  text.rs  wgpu_state.rs
daemon/src/audio/: mod.rs  playback.rs  tinyaudio.rs
daemon/src/button/: action.rs  anchor.rs  dismiss.rs  mod.rs
daemon/src/components/: icons.rs  mod.rs  notification.rs  progress.rs
daemon/src/components/button/: action.rs  anchor.rs  dismiss.rs  mod.rs
daemon/src/components/text/: body.rs  markup.rs  mod.rs  summary.rs
daemon/src/config/: border.rs  button.rs  color.rs  keymaps.rs  mod.rs  partial.rs  text.rs
daemon/src/dbus/: desktop_portal.rs  mod.rs  moxnotify.rs  portal.rs  xdg.rs
daemon/src/input/: keyboard.rs  pointer.rs
daemon/src/manager/: mod.rs  view.rs
daemon/src/notification_manager/: mod.rs  notification.rs  notification_view.rs
daemon/src/notification_manager/notification/: icons.rs  mod.rs  progress.rs
daemon/src/rendering/: animation.rs  mod.rs  text_renderer.rs  wgpu_state.rs
daemon/src/rendering/shape_renderer/: mod.rs  shader.wgsl
daemon/src/rendering/surface/: mod.rs  wgpu_surface.rs
daemon/src/rendering/texture_renderer/: mod.rs  shader.wgsl
daemon/src/seat/: keyboard.rs  mod.rs  pointer.rs
daemon/src/shape_renderer/: mod.rs  shader.wgsl
daemon/src/surface/: mod.rs  wgpu_surface.rs
daemon/src/texture_renderer/: mod.rs  shader.wgsl
daemon/src/utils/: buffers.rs  image_data.rs  math.rs  mod.rs
daemon/tests/: integration.rs
mox/: Cargo.toml
mox/src/: main.rs  notify.rs
moxalert/: Cargo.toml  README.md
moxalert/src/: config.rs  image_data.rs  (+4 more)
moxnotify/: Cargo.toml
moxnotifyctl/: Cargo.toml
moxnotifyd/: Cargo.toml
moxsignal-daemon/: Cargo.toml
moxsignalctl/: Cargo.toml
nix/: home-manager.nix  package.nix  stylix.nix
(+66 files in other folders)
